Changes file for {{$dist->name}}

{{$NEXT}}

  * Move towards using Path::Tiny for errything (John Anderson)
  * Whitespace cleanup (John Anderson)
  * Clean up 'use' stanzas (John Anderson)
  * delete 'version' command [#48] (John Anderson)

1.23      2015-03-15 01:50:42-07:00 America/Los_Angeles (TRIAL RELEASE)

  * Port to Moo (John Anderson)
  * Silence warning if PERL5LIB is not defined (Yanick Champoux)
  * Specify minimum version on List::AllUtils (John Anderson)

1.22      2015-02-26 07:40:05-08:00 America/Los_Angeles

  * Really fixed test failures (John Anderson)

1.21      2015-02-24 19:15:58-08:00 America/Los_Angeles

  * Fixed test failures (John Anderson)

1.20      2015-02-23 17:51:14-08:00 America/Los_Angeles

  * Add 'lib' subcommand (Yanick Champoux)
  * Add 'tag' subcommand (Yanick Champoux)
  * Add 'do' subcommand (Yanick Champoux)
  * Add '--json' option to 'got list' (Yanick Champoux)
  * Extend the 'add' subcommand in a number of ways:
      * Allow to pass more than one directory as arguments.
      * Add '--recursive', to hunt down git repos under a main
        directory.
      * Make '--tag X' set the default tag(s) to X
      * If there's only one remote, don't ask, use that one.
      * Instead of asking the user to type the remote URI, give the
        choice between the remote name/URL pairs.

1.19      2014-08-29 22:07:03-07:00 America/Los_Angeles

  * Make 'mux' work with multiple repos instead of just one
  * Add 'dirty' flag to 'mux' to make it open all repos with unclear
    status

1.18      2014-08-12 22:03:34-05:00 America/Chicago

  * Documentation updates for 'fetch' and 'gc' (Dan McCracken)

1.17      2014-07-24 10:03:54-07:00 America/Los_Angeles

  * Modify dist.ini to pull the INSTALL file from the build back into
    the repo (addresses #28)

1.16      2014-07-23 16:19:42-07:00 America/Los_Angeles

  * Load Net::GitHub on the fly in the 'fork' command. Make it an