@@ -21,7 +21,6 @@ exclude_filename = INSTALL
 [Prereqs]
 Git::Wrapper = 0.014
 List::AllUtils=0.09
-Term::ReadLine::Perl = 0
 [Prereqs / RuntimeRecommends]
 IO::Page = 0
 JSON=0
