@@ -2,6 +2,7 @@ Changes file for {{$dist->name}}
 
 {{$NEXT}}
 
+  * Get rid of Term::Readline in favor of IO::Prompt::Simple (John Anderson)
   * Move towards using Path::Tiny for errything (John Anderson)
   * Whitespace cleanup (John Anderson)
   * Clean up 'use' stanzas (John Anderson)
